--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="shortcut icon" href="./assets/icon-page.svg" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./assets/icon-page.svg"
+      type="image/x-icon"
+    />
     <title>DevBoost desafio 2</title>
   </head>
   <body>
@@ -16,7 +20,9 @@
           <div class="menu" id="nav">
             <div class="menu-nav-page" id="menu">
               <ul class="menu-toggle">
-                <li class="active-nav"><a href="#" onclick="closeMenu()">Posts</a></li>
+                <li class="active-nav">
+                  <a href="#" onclick="closeMenu()">Posts</a>
+                </li>
                 <li><a href="#" onclick="closeMenu()">Ferramentas</a></li>
                 <li>
                   <a href="#" onclick="closeMenu()">Eventos</a>
@@ -31,13 +37,9 @@
               </ul>
             </div>
             <div class="menu-nav-user">
-              <ul>
+              <ul class="menu-user">
                 <li><img src="./assets/icon-search.svg" alt="" /></li>
-              </ul>
-              <ul>
                 <li><img src="./assets/icon-social-grup.svg" alt="" /></li>
-              </ul>
-              <ul>
                 <li><img src="./assets/icon-notification.svg" alt="" /></li>
               </ul>
               <div class="btn">
